--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@testing-library/cypress": "^10.0.1",
-    "cypress": "^13.6.2"
+    "cypress": "^13.6.2",
+    "cypress-iframe": "^1.0.1",
+    "cypress-xpath": "^2.0.1"
   }
 }
